<?xml version="1.0" encoding="utf-8"?>
<!-- Migration04 §04: drawer screen — see Plans/Migration04/04-settings-ui-modularization.md §6 -->
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:launcher="http://schemas.android.com/apk/res-auto"
    android:title="@string/drawer_category_title">

    <androidx.preference.SeekBarPreference
        android:key="pref_drawer_icon_size_factor"
        android:title="@string/drawer_icon_size_title"
        android:defaultValue="100"
        android:max="150"
        android:persistent="false" />

    <SwitchPreference
        android:key="pref_show_drawer_labels"
        android:title="@string/show_drawer_labels_title"
        android:summary="@string/show_drawer_labels_summary"
        android:defaultValue="true"
        android:persistent="false" />

    <androidx.preference.SeekBarPreference
        android:key="pref_drawer_label_size_factor"
        android:title="@string/drawer_label_size_title"
        android:defaultValue="100"
        android:max="150"
        android:persistent="false" />

    <Preference
        android:key="pref_hidden_apps"
        android:title="@string/hidden_apps_title"
        android:summary="@string/hidden_apps_summary"
        android:persistent="false" />

    <SwitchPreference
        android:key="pref_drawer_folders_enabled"
        android:title="@string/drawer_folders_manage_title"
        android:summary="@string/drawer_folders_manage_summary"
        android:defaultValue="false"
        android:persistent="false" />

    <Preference
        android:key="pref_drawer_folders_manage"
        android:title="@string/drawer_folders_manage_title"
        android:summary="@string/drawer_folders_manage_summary"
        android:persistent="false" />

    <ListPreference
        android:key="pref_drawer_columns"
        android:title="@string/drawer_columns_title"
        android:summary="@string/drawer_columns_summary"
        android:persistent="false" />

    <SwitchPreference
        android:key="pref_enable_two_line_toggle"
        android:title="@string/two_line_drawer_labels_title"
        android:summary="@string/two_line_drawer_labels_summary"
        android:defaultValue="false"
        android:persistent="false" />

    <ListPreference
        android:key="pref_hidden_apps_in_search"
        android:title="@string/hidden_apps_in_search_title"
        android:summary="@string/hidden_apps_in_search_summary"
        android:entries="@array/hidden_apps_in_search_entries"
        android:entryValues="@array/hidden_apps_in_search_values"
        android:defaultValue="never"
        android:persistent="false" />

    <SwitchPreference
        android:key="pref_drawer_haptic"
        android:title="@string/drawer_haptic_title"
        android:summary="@string/drawer_haptic_summary"
        android:defaultValue="false"
        android:persistent="false" />

    <androidx.preference.SeekBarPreference
        android:key="pref_drawer_cell_height_factor"
        android:title="@string/drawer_cell_height_factor_title"
        android:defaultValue="100"
        android:max="150"
        android:min="30"
        android:persistent="false" />

    <androidx.preference.SeekBarPreference
        android:key="pref_drawer_left_right_margin_factor"
        android:title="@string/drawer_lr_margin_factor_title"
        android:defaultValue="100"
        android:max="150"
        android:min="0"
        android:persistent="false" />

    <SwitchPreference
        android:key="pref_drawer_show_scrollbar"
        android:title="@string/drawer_show_scrollbar_title"
        android:defaultValue="true"
        android:persistent="false" />

    <SwitchPreference
        android:key="pref_drawer_themed_icons"
        android:title="@string/drawer_themed_icons_title"
        android:summary="@string/drawer_themed_icons_summary"
        android:defaultValue="false"
        android:persistent="false" />

    <SwitchPreference
        android:key="pref_show_suggested_apps"
        android:title="@string/show_suggested_apps_title"
        android:summary="@string/show_suggested_apps_summary"
        android:defaultValue="false"
        android:persistent="false" />

    <ListPreference
        android:key="pref_drawer_bg_color"
        android:title="@string/drawer_bg_color_title"
        android:summary="@string/drawer_bg_color_summary"
        android:persistent="false" />

    <Preference
        android:key="pref_drawer_bg_hex"
        android:title="@string/drawer_bg_hex_title"
        android:summary="@string/drawer_bg_hex_summary"
        android:persistent="false" />

    <androidx.preference.SeekBarPreference
        android:key="pref_drawer_opacity"
        android:title="@string/drawer_opacity_title"
        android:defaultValue="100"
        android:max="100"
        android:persistent="false" />

    <ListPreference
        android:key="pref_drawer_sort_order"
        android:title="@string/drawer_sort_order_title"
        android:summary="@string/drawer_sort_order_summary"
        android:persistent="false" />

    <SwitchPreference
        android:key="pref_drawer_list_view"
        android:title="@string/drawer_list_view_title"
        android:summary="@string/drawer_list_view_summary"
        android:defaultValue="false"
        android:persistent="false" />

    <ListPreference
        android:key="pref_drawer_animation"
        android:title="@string/drawer_animation_title"
        android:summary="@string/drawer_animation_summary"
        android:persistent="false" />

    <SwitchPreference
        android:key="pref_hide_drawer_search"
        android:title="@string/hide_drawer_search_title"
        android:summary="@string/hide_drawer_search_summary"
        android:defaultValue="false"
        android:persistent="false" />

    <SwitchPreference
        android:key="pref_search_bar_bottom"
        android:title="@string/search_bar_bottom_title"
        android:summary="@string/search_bar_bottom_summary"
        android:defaultValue="false"
        android:persistent="false" />

    <SwitchPreference
        android:key="pref_auto_show_keyboard"
        android:title="@string/auto_show_keyboard_title"
        android:summary="@string/auto_show_keyboard_summary"
        android:defaultValue="false"
        android:persistent="false" />

    <SwitchPreference
        android:key="pref_keyboard_auto_hide"
        android:title="@string/keyboard_auto_hide_title"
        android:summary="@string/keyboard_auto_hide_summary"
        android:defaultValue="true"
        android:persistent="false" />

    <SwitchPreference
        android:key="pref_remember_drawer_position"
        android:title="@string/remember_drawer_position_title"
        android:summary="@string/remember_drawer_position_summary"
        android:defaultValue="false"
        android:persistent="false" />

</androidx.preference.PreferenceScreen>
